--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ def pomConfig = {
     }
 
     scm {
-        url "https://github.com/hmcts/probate-commons"
+        url "https://github.com/hmcts/probate-pact-commons"
     }
 }
 
@@ -88,7 +88,7 @@ publishing {
             artifact sourcesJar
             artifact javadocJar
             groupId project.group
-            artifactId 'probate-commons'
+            artifactId 'probate-pact-commons'
             version project.version
         }
     }
@@ -101,10 +101,10 @@ bintray {
     publish = true
     pkg {
         repo = 'hmcts-maven'
-        name = 'probate-commons'
+        name = 'probate-pact-commons'
         userOrg = 'hmcts'
         licenses = ['MIT']
-        vcsUrl = 'https://github.com/hmcts/probate-commons'
+        vcsUrl = 'https://github.com/hmcts/probate-pact-commons'
         version {
             name = project.version
         }
@@ -112,14 +112,8 @@ bintray {
 }
 
 def versions = [
-        jupiter           : '5.3.2',
         lombok            : '1.18.12',
         jackson           : '2.9.7',
-        apacheCommons     : '3.8.1',
-        hibernateValidator: '6.0.13.Final',
-        springfoxSwagger  : '2.9.2',
-        springBoot        : '2.1.0.RELEASE',
-        commonsIo         : '2.6',
         pact_version      : '4.1.0'
 ]
 
@@ -130,26 +124,7 @@ dependencies {
     compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: versions.jackson
     compileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
-
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: versions.apacheCommons
-    compile group: 'org.hibernate.validator', name: 'hibernate-validator', version: versions.hibernateValidator
-    compile group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
-    compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.3'
-
-    testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: versions.jupiter
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: versions.springBoot
-    testCompile group: 'commons-io', name: 'commons-io', version: versions.commonsIo
-    testCompile group: 'javax.el', name: 'javax.el-api', version: '3.0.0'
-    testCompile group: 'org.glassfish.web', name: 'javax.el', version: '2.2.6'
-
-    // pact
     compile group: 'au.com.dius.pact.consumer', name: 'java8', version: versions.pact_version
-    // pact
-    testCompile("org.junit.jupiter:junit-jupiter-api:5.3.2")
-    testRuntime("org.junit.jupiter:junit-jupiter-engine:5.3.2")
-    testImplementation('org.junit.jupiter:junit-jupiter-api:5.3.2')
-    testImplementation('org.mockito:mockito-core:2.7.22')
-
 
 }
 
